@@ -135,6 +135,13 @@ QPDFWriter::getBuffer()
 }
 
 void
+QPDFWriter::setOutputPipeline(Pipeline* p)
+{
+    this->filename = "custom pipeline";
+    initializePipelineStack(p);
+}
+
+void
 QPDFWriter::setObjectStreamMode(qpdf_object_stream_e mode)
 {
     this->object_stream_mode = mode;
