@@ -149,7 +149,7 @@ $td->runtest("remove page we don't have",
 	     $td->NORMALIZE_NEWLINES);
 # ----------
 $td->notify("--- Miscellaneous Tests ---");
-$n_tests += 53;
+$n_tests += 55;
 
 $td->runtest("qpdf version",
 	     {$td->COMMAND => "qpdf --version"},
@@ -403,6 +403,13 @@ $td->runtest("check output",
 $td->runtest("check output",
              {$td->FILE => "d.pdf"},
              {$td->FILE => "extra-header-lin-newline.pdf"});
+$td->runtest("output to custom pipeline",
+             {$td->COMMAND => "test_driver 33 minimal.pdf"},
+             {$td->STRING => "test 33 done\n", $td->EXIT_STATUS => 0},
+             $td->NORMALIZE_NEWLINES);
+$td->runtest("check output",
+             {$td->FILE => "a.pdf"},
+             {$td->FILE => "custom-pipeline.pdf"});
 
 show_ntests();
 # ----------
